# sparkler

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: build.yaml
LICENSES/: MIT
src/: lib.rs
